Thu Mar 25 21:45:00 2004  Shigeo Kobayashi <shigek@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c: Bug in + and - reported by Bret Jolly
	  fixed.

Thu Mar 25 21:01:32 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* version.c (ruby_show_copyright): obtain copyright year from
	  RUBY_RELEASE_YEAR.

	* win32/resource.rb: ditto.

>>>>>>> 1.3093
Thu Mar 25 19:37:35 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/resource.rb: default rubyw icon to ruby.ico, and let DLL also
	  include them.

	* win32/resource.rb: include winver.h for older WindowsCE.

Thu Mar 25 14:01:03 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk, */Makefile.sub (lib, dll): phony targets.

	* configure.in (ruby, miniruby): ditto.

	* cygwin/GNUmakefile.in (rubyw): ditto.

Thu Mar 25 04:16:18 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/ri/ri_options.rb (RI::Options): Add the --list-names option,
	  which dumps our all known names

Thu Mar 25 03:57:47 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/ri/ri_util.rb (NameDescriptor::initialize): No longer
	  allow nested classes to be designated using "."--you must
	  now use "::"

Thu Mar 25 02:00:18 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/generators/template/html/one_page_html.rb (Page):
	  Fix to work with C modules.

Wed Mar 24 20:49:00 2004  Gavin Sinclair <gsinclair@soyabean.com.au>

	* lib/uri.rb: Documented (thanks Dmitry V. Sabanin).
	* lib/uri/common.rb: Ditto.
	* lib/uri/ftp.rb: Ditto.
	* lib/uri/generic.rb: Ditto.
	* lib/uri/http.rb: Ditto.
	* lib/uri/https.rb: Ditto.
	* lib/uri/ldap.rb: Ditto.
	* lib/uri/mailto.rb: Ditto.

Wed Mar 24 18:48:05 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb ($ruby, $topdir, $hdrdir): should not be affected by
	  DESTDIR after installed.

	* lib/mkmf.rb (dummy_makefile): default file lists to be cleaned.

Wed Mar 24 12:32:56 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parse_c.rb (RDoc::C_Parser::handle_class_module):